--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
 
 <header>
-    <h1>Limekiln (H)</h1>
+    <h1>Basford Bashers (A)</h1>
 </header>
 
     <!-- Table for Player Results -->
@@ -98,28 +98,28 @@
         </tr>
         <tr>
             <td>3</td>
-            <td>William Neville</td>
+            <td>Dean Nixon</td>
             <td>Won</td>
         </tr>
         <tr>
             <td>4</td>
-            <td>Dale Nix</td>
-            <td>Lost</td>
+            <td>Blake Nixon</td>
+            <td>Won</td>
         </tr>
         <tr>
             <td>5</td>
             <td>Matt Keys</td>
-            <td>Lost</td>
+            <td>Won</td>
         </tr>
         <tr>
             <td>6</td>
-            <td>James Stevens/Carl Bilbey</td>
+            <td>Wich D/Willam Neville</td>
             <td>Lost</td>
         </tr>
         <tr>
             <td>7</td>
             <td>Andy Saxton</td>
-            <td>Won</td>
+            <td>Lost</td>
         </tr>
         <tr>
             <td>8</td>
@@ -128,24 +128,24 @@
         </tr>
         <tr>
             <td>9</td>
-            <td>Andy Saxton</td>
-            <td>Lost</td>
+            <td>Blake Nixon</td>
+            <td>Won</td>
         </tr>
         <tr>
             <td>10</td>
-            <td>Wich Doungcharassaeng</td>
-            <td>Lost</td>
+            <td>Matt Keys</td>
+            <td>Won</td>
         </tr>
         <tr>
             <td>11</td>
-            <td>Dale Nix</td>
+            <td>Andy Saxton</td>
             <td>Won</td>
         </tr>
     </tbody>
 </table>
  
 <section>
-    <div class="sub-header"><strong>Final Result:</strong><br>Won 6 - 5</div>
+    <div class="sub-header"><strong>Final Result:</strong><br>Won 9 - 2</div>
 </section>
 
 <section>
@@ -156,6 +156,7 @@
 </body>
 
 </html>
+
 
 
 
